<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_mionix" />


    <RelativeLayout
        android:id="@+id/rvLogin"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:id="@+id/tiEmailLogin"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/tietEmailLogin"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tiPasswordLogin"
            android:hint="@string/password"
            android:layout_below="@id/tiEmailLogin"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tietPasswordLogin"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btRegister"
            android:layout_below="@+id/tiPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttoncustomcolor"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp" />
        <!--Button Login-->
        <Button
            android:id="@+id/btLogin"
            android:layout_below="@+id/btRegister"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttoncustomcolor"
            android:text="@string/login" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>