<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/appbar_main"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/appbar_main"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btArlam"
            android:layout_marginBottom="100dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btStop"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttoncustomcolor"
            android:text="@string/alarm" />
        <Button
            android:id="@+id/btStop"
            android:layout_marginBottom="100dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/btArlam"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btStart"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttoncustomcolor"
            android:text="@string/stop" />
        <Button
            android:id="@+id/btStart"
            android:layout_marginBottom="100dp"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btStop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/buttoncustomcolor"
            android:text="@string/start" />
        <Button
            android:id="@+id/btChangeMusic"
            android:layout_marginBottom="100dp"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/btStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toTopOf="@id/tvMain"
            android:background="@drawable/buttoncustomcolor"
            android:text="@string/change_music" />
        <TextView
            app:layout_constraintTop_toBottomOf="@id/btChangeMusic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tvMain"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>